# system-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_FILES.md  DOCKER_QUICK_START.md  IMPLEMENTACAO_COMPLETA.md  MUDANCA_PORTAS.md  PLANO_IMPLEMENTACAO_COMPLETO.md  QUICK_START.md  README.md  SERVICOS_RODANDO.md  STATUS_ATUAL.md  TESTE_CHROME_DEVTOOLS.md  USER_GUIDE.md  docker-compose.yml  nginx.conf  setup.sh  teardown.sh
collector/: API_DOCUMENTATION.md  Cargo.toml  Dockerfile
collector/examples/: api_server.rs  basic_usage.rs  detector_usage.rs  test_range_queries.rs
collector/src/: lib.rs  main.rs
collector/src/api/: mod.rs  rest.rs  routes.rs  websocket.rs
collector/src/collectors/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  temperature.rs  usb.rs
collector/src/detector/: README.md  analyzer.rs  mod.rs  rules.rs
collector/src/storage/: README.md  mod.rs  models.rs  repository.rs
collector/src/storage/migrations/: 001_initial.sql
collector/systemd/: system-monitor.service
docs/: ARCHITECTURE.md  ARQUITETURA.md  CLIENTES.md  CLIENTS.md
scripts/: README.md  build-all.sh  capturar_zumbis.sh  install-no-build.sh  install.sh  resetar_usb.sh  run-dev.sh  run-prod.sh  scripts_emergencia.sh  testar_webcam.sh  uninstall.sh  verificar_elgato.sh  verificar_zumbis.sh
shared/: Cargo.toml
tui-client/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  test_tui.sh
tui-client/src/: api_client.rs  config.rs  main.rs
tui-client/src/ui/: anomalies_view.rs  cpu_view.rs  dashboard.rs  disk_view.rs  memory_view.rs  mod.rs
web-frontend/: .gitignore  Dockerfile  FILES_MANIFEST.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.txt  docker-compose.yml  (+6 more)
(+25 files in other folders)
