[workspace]
members = [
    "collector",
    "tui-client",
    "shared",
]
resolver = "2"

[workspace.dependencies]
sysinfo = "0.32"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
