[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "collector"
path = "src/lib.rs"

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }

# Local dependencies
shared = { path = "../shared" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
