[package]
name = "tui-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui-client"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Local dependencies
shared = { path = "../shared" }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
anyhow = "1.0"
